refactoring bbh, step 1

--- a/QuestPackages/m64/bbh/environment.yml
+++ b/QuestPackages/m64/bbh/environment.yml
@@ -99,58 +99,58 @@ events:
   # Bridge #1: Delete
   e_brg_1_delete:         "folder e_gtag_add_brg_1,e_brg_1_del_blocks"
   e_gtag_add_brg_1:       "globaltag add bbh_brg_1"
-  e_brg_1_del_blocks:     "folder e_brg_1_block_air,m64-sfx.e_block_break,e_brg_1_add_blocks delay:$brg_del_delay$ ticks"
-  e_brg_1_block_air:      "command execute in minecraft:marocraft run fill $brg1.a$ $brg1.b$ minecraft:air"
+  e_brg_1_del_blocks:     "folder e_brg_1_block_air,core-sfx.e_block_break,e_brg_1_add_blocks delay:$brg_del_delay$ ticks"
+  e_brg_1_block_air:      "command execute in minecraft:overworld run fill $brg1.a$ $brg1.b$ minecraft:air"
   e_brg_1_add_blocks:     "folder e_brg_1_block_set,e_gtag_del_brg_1 delay:3"
-  e_brg_1_block_set:      "command execute in minecraft:marocraft run fill $brg1.a$ $brg1.b$ minecraft:$brg_block$"
+  e_brg_1_block_set:      "command execute in minecraft:overworld run fill $brg1.a$ $brg1.b$ minecraft:$brg_block$"
   e_gtag_del_brg_1:       "globaltag delete bbh_brg_1"
   # Bridge #2: Delete
   e_brg_2_delete:         "folder e_gtag_add_brg_2,e_brg_2_del_blocks"
   e_gtag_add_brg_2:       "globaltag add bbh_brg_2"
-  e_brg_2_del_blocks:     "folder e_brg_2_block_air,m64-sfx.e_block_break,e_brg_2_add_blocks delay:$brg_del_delay$ ticks"
-  e_brg_2_block_air:      "command execute in minecraft:marocraft run fill $brg2.a$ $brg2.b$ minecraft:air"
+  e_brg_2_del_blocks:     "folder e_brg_2_block_air,core-sfx.e_block_break,e_brg_2_add_blocks delay:$brg_del_delay$ ticks"
+  e_brg_2_block_air:      "command execute in minecraft:overworld run fill $brg2.a$ $brg2.b$ minecraft:air"
   e_brg_2_add_blocks:     "folder e_brg_2_block_set,e_gtag_del_brg_2 delay:3"
-  e_brg_2_block_set:      "command execute in minecraft:marocraft run fill $brg2.a$ $brg2.b$ minecraft:$brg_block$"
+  e_brg_2_block_set:      "command execute in minecraft:overworld run fill $brg2.a$ $brg2.b$ minecraft:$brg_block$"
   e_gtag_del_brg_2:       "globaltag delete bbh_brg_2"
   # Bridge #3: Delete
   e_brg_3_delete:         "folder e_gtag_add_brg_3,e_brg_3_del_blocks"
   e_gtag_add_brg_3:       "globaltag add bbh_brg_3"
-  e_brg_3_del_blocks:     "folder e_brg_3_block_air,m64-sfx.e_block_break,e_brg_3_add_blocks delay:$brg_del_delay$ ticks"
-  e_brg_3_block_air:      "command execute in minecraft:marocraft run fill $brg3.a$ $brg3.b$ minecraft:air"
+  e_brg_3_del_blocks:     "folder e_brg_3_block_air,core-sfx.e_block_break,e_brg_3_add_blocks delay:$brg_del_delay$ ticks"
+  e_brg_3_block_air:      "command execute in minecraft:overworld run fill $brg3.a$ $brg3.b$ minecraft:air"
   e_brg_3_add_blocks:     "folder e_brg_3_block_set,e_gtag_del_brg_3 delay:3"
-  e_brg_3_block_set:      "command execute in minecraft:marocraft run fill $brg3.a$ $brg3.b$ minecraft:$brg_block$"
+  e_brg_3_block_set:      "command execute in minecraft:overworld run fill $brg3.a$ $brg3.b$ minecraft:$brg_block$"
   e_gtag_del_brg_3:       "globaltag delete bbh_brg_3"
   # Bridge #4: Delete
   e_brg_4_delete:         "folder e_gtag_add_brg_4,e_brg_4_del_blocks"
   e_gtag_add_brg_4:       "globaltag add bbh_brg_4"
-  e_brg_4_del_blocks:     "folder e_brg_4_block_air,m64-sfx.e_block_break,e_brg_4_add_blocks delay:$brg_del_delay$ ticks"
-  e_brg_4_block_air:      "command execute in minecraft:marocraft run fill $brg4.a$ $brg4.b$ minecraft:air"
+  e_brg_4_del_blocks:     "folder e_brg_4_block_air,core-sfx.e_block_break,e_brg_4_add_blocks delay:$brg_del_delay$ ticks"
+  e_brg_4_block_air:      "command execute in minecraft:overworld run fill $brg4.a$ $brg4.b$ minecraft:air"
   e_brg_4_add_blocks:     "folder e_brg_4_block_set,e_gtag_del_brg_4 delay:3"
-  e_brg_4_block_set:      "command execute in minecraft:marocraft run fill $brg4.a$ $brg4.b$ minecraft:$brg_block$"
+  e_brg_4_block_set:      "command execute in minecraft:overworld run fill $brg4.a$ $brg4.b$ minecraft:$brg_block$"
   e_gtag_del_brg_4:       "globaltag delete bbh_brg_4"
   # Bridge #5: Delete
   e_brg_5_delete:         "folder e_gtag_add_brg_5,e_brg_5_del_blocks"
   e_gtag_add_brg_5:       "globaltag add bbh_brg_5"
-  e_brg_5_del_blocks:     "folder e_brg_5_block_air,m64-sfx.e_block_break,e_brg_5_add_blocks delay:$brg_del_delay$ ticks"
-  e_brg_5_block_air:      "command execute in minecraft:marocraft run fill $brg5.a$ $brg5.b$ minecraft:air"
+  e_brg_5_del_blocks:     "folder e_brg_5_block_air,core-sfx.e_block_break,e_brg_5_add_blocks delay:$brg_del_delay$ ticks"
+  e_brg_5_block_air:      "command execute in minecraft:overworld run fill $brg5.a$ $brg5.b$ minecraft:air"
   e_brg_5_add_blocks:     "folder e_brg_5_block_set,e_gtag_del_brg_5 delay:3"
-  e_brg_5_block_set:      "command execute in minecraft:marocraft run fill $brg5.a$ $brg5.b$ minecraft:$brg_block$"
+  e_brg_5_block_set:      "command execute in minecraft:overworld run fill $brg5.a$ $brg5.b$ minecraft:$brg_block$"
   e_gtag_del_brg_5:       "globaltag delete bbh_brg_5"
   # Bridge #6: Delete
   e_brg_6_delete:         "folder e_gtag_add_brg_6,e_brg_6_del_blocks"
   e_gtag_add_brg_6:       "globaltag add bbh_brg_6"
-  e_brg_6_del_blocks:     "folder e_brg_6_block_air,m64-sfx.e_block_break,e_brg_6_add_blocks delay:$brg_del_delay$ ticks"
-  e_brg_6_block_air:      "command execute in minecraft:marocraft run fill $brg6.a$ $brg6.b$ minecraft:air"
+  e_brg_6_del_blocks:     "folder e_brg_6_block_air,core-sfx.e_block_break,e_brg_6_add_blocks delay:$brg_del_delay$ ticks"
+  e_brg_6_block_air:      "command execute in minecraft:overworld run fill $brg6.a$ $brg6.b$ minecraft:air"
   e_brg_6_add_blocks:     "folder e_brg_6_block_set,e_gtag_del_brg_6 delay:3"
-  e_brg_6_block_set:      "command execute in minecraft:marocraft run fill $brg6.a$ $brg6.b$ minecraft:$brg_block$"
+  e_brg_6_block_set:      "command execute in minecraft:overworld run fill $brg6.a$ $brg6.b$ minecraft:$brg_block$"
   e_gtag_del_brg_6:       "globaltag delete bbh_brg_6"
   # Bridge #7: Delete
   e_brg_7_delete:         "folder e_gtag_add_brg_7,e_brg_7_del_blocks"
   e_gtag_add_brg_7:       "globaltag add bbh_brg_7"
-  e_brg_7_del_blocks:     "folder e_brg_7_block_air,m64-sfx.e_block_break,e_brg_7_add_blocks delay:$brg_del_delay$ ticks"
-  e_brg_7_block_air:      "command execute in minecraft:marocraft run fill $brg7.a$ $brg7.b$ minecraft:air"
+  e_brg_7_del_blocks:     "folder e_brg_7_block_air,core-sfx.e_block_break,e_brg_7_add_blocks delay:$brg_del_delay$ ticks"
+  e_brg_7_block_air:      "command execute in minecraft:overworld run fill $brg7.a$ $brg7.b$ minecraft:air"
   e_brg_7_add_blocks:     "folder e_brg_7_block_set,e_gtag_del_brg_7 delay:3"
-  e_brg_7_block_set:      "command execute in minecraft:marocraft run fill $brg7.a$ $brg7.b$ minecraft:$brg_block$"
+  e_brg_7_block_set:      "command execute in minecraft:overworld run fill $brg7.a$ $brg7.b$ minecraft:$brg_block$"
   e_gtag_del_brg_7:       "globaltag delete bbh_brg_7"
 
   # Bridge: Restore
