--- a/QuestPackages/m64/bbh/stars/star_2.yml
+++ b/QuestPackages/m64/bbh/stars/star_2.yml
@@ -32,35 +32,14 @@ variables:
 events:
   ### STAR 2 - RIDE BIG BOO'S MERRY-GO-ROUND
   # Init
-  init_s2:                "folder e_s2_add_obj_boo_1,e_s2_add_obj_boo_2,e_s2_add_obj_boo_3,e_s2_add_obj_b25"
-  e_s2_add_obj_boo_1:     "folder e_s2_add_obj_b1,e_s2_add_obj_b2,e_s2_add_obj_b3,e_s2_add_obj_b4,e_s2_add_obj_b5,e_s2_add_obj_b6,e_s2_add_obj_b7,e_s2_add_obj_b8"
-  e_s2_add_obj_boo_2:     "folder e_s2_add_obj_b9,e_s2_add_obj_b10,e_s2_add_obj_b11,e_s2_add_obj_b12,e_s2_add_obj_b13,e_s2_add_obj_b14,e_s2_add_obj_b15,e_s2_add_obj_b16"
-  e_s2_add_obj_boo_3:     "folder e_s2_add_obj_b17,e_s2_add_obj_b18,e_s2_add_obj_b19,e_s2_add_obj_b20,e_s2_add_obj_b21,e_s2_add_obj_b22,e_s2_add_obj_b23,e_s2_add_obj_b24"
-  e_s2_add_obj_b1:        "objective add o_s2_boo_1"
-  e_s2_add_obj_b2:        "objective add o_s2_boo_2"
-  e_s2_add_obj_b3:        "objective add o_s2_boo_3"
-  e_s2_add_obj_b4:        "objective add o_s2_boo_4"
-  e_s2_add_obj_b5:        "objective add o_s2_boo_5"
-  e_s2_add_obj_b6:        "objective add o_s2_boo_6"
-  e_s2_add_obj_b7:        "objective add o_s2_boo_7"
-  e_s2_add_obj_b8:        "objective add o_s2_boo_8"
-  e_s2_add_obj_b9:        "objective add o_s2_boo_9"
-  e_s2_add_obj_b10:       "objective add o_s2_boo_10"
-  e_s2_add_obj_b11:       "objective add o_s2_boo_11"
-  e_s2_add_obj_b12:       "objective add o_s2_boo_12"
-  e_s2_add_obj_b13:       "objective add o_s2_boo_13"
-  e_s2_add_obj_b14:       "objective add o_s2_boo_14"
-  e_s2_add_obj_b15:       "objective add o_s2_boo_15"
-  e_s2_add_obj_b16:       "objective add o_s2_boo_16"
-  e_s2_add_obj_b17:       "objective add o_s2_boo_17"
-  e_s2_add_obj_b18:       "objective add o_s2_boo_18"
-  e_s2_add_obj_b19:       "objective add o_s2_boo_19"
-  e_s2_add_obj_b20:       "objective add o_s2_boo_20"
-  e_s2_add_obj_b21:       "objective add o_s2_boo_21"
-  e_s2_add_obj_b22:       "objective add o_s2_boo_22"
-  e_s2_add_obj_b23:       "objective add o_s2_boo_23"
-  e_s2_add_obj_b24:       "objective add o_s2_boo_24"
-  e_s2_add_obj_b25:       "objective add o_s2_boo_25"
+  init_s2:                "folder e_s2_add_obj_boos"
+  e_s2_add_obj_boos:      "folder e_s2_add_obj_boo_g1,e_s2_add_obj_boo_g2,e_s2_add_obj_boo_g3,e_s2_add_obj_boo_g4,e_s2_add_obj_boo_g5"
+  e_s2_add_obj_boo_g1:    "run ^objective add o_s2_boo_1 ^objective add o_s2_boo_2 ^objective add o_s2_boo_3 ^objective add o_s2_boo_4 ^objective add o_s2_boo_5"
+  e_s2_add_obj_boo_g2:    "run ^objective add o_s2_boo_6 ^objective add o_s2_boo_7 ^objective add o_s2_boo_8 ^objective add o_s2_boo_9 ^objective add o_s2_boo_10"
+  e_s2_add_obj_boo_g3:    "run ^objective add o_s2_boo_11 ^objective add o_s2_boo_12 ^objective add o_s2_boo_13 ^objective add o_s2_boo_14 ^objective add o_s2_boo_15"
+  e_s2_add_obj_boo_g4:    "run ^objective add o_s2_boo_16 ^objective add o_s2_boo_17 ^objective add o_s2_boo_18 ^objective add o_s2_boo_19 ^objective add o_s2_boo_20"
+  e_s2_add_obj_boo_g5:    "run ^objective add o_s2_boo_21 ^objective add o_s2_boo_22 ^objective add o_s2_boo_23 ^objective add o_s2_boo_24 ^objective add o_s2_boo_25"
+
 
   e_s2_sfx_boo_laugh:     "notify io:sound sound:entity.allay.ambient_with_item soundvolume:10"
   e_s2_sfx_boo_die:       "notify io:sound sound:entity.allay.death soundvolume:10"
@@ -93,38 +72,17 @@ events:
 
   
   # Cleanup
-  deit_s2:                "folder e_s2_del_obj_boo_x,e_obj_del_s2_star,e_s2_del_point_bk,if_s2_spawned,e_s2_tag_del_spawned"
-  e_s2_del_obj_boo_x:     "folder e_s2_del_obj_boo_1,e_s2_del_obj_boo_2,e_s2_del_obj_boo_3,e_s2_del_obj_b25"
-  e_s2_del_obj_boo_1:     "folder e_s2_del_obj_b1,e_s2_del_obj_b2,e_s2_del_obj_b3,e_s2_del_obj_b4,e_s2_del_obj_b5,e_s2_del_obj_b6,e_s2_del_obj_b7,e_s2_del_obj_b8"
-  e_s2_del_obj_boo_2:     "folder e_s2_del_obj_b9,e_s2_del_obj_b10,e_s2_del_obj_b11,e_s2_del_obj_b12,e_s2_del_obj_b13,e_s2_del_obj_b14,e_s2_del_obj_b15,e_s2_del_obj_b16"
-  e_s2_del_obj_boo_3:     "folder e_s2_del_obj_b17,e_s2_del_obj_b18,e_s2_del_obj_b19,e_s2_del_obj_b20,e_s2_del_obj_b21,e_s2_del_obj_b22,e_s2_del_obj_b23,e_s2_del_obj_b24"
-  e_s2_del_obj_b1:        "objective remove o_s2_boo_1"
-  e_s2_del_obj_b2:        "objective remove o_s2_boo_2"
-  e_s2_del_obj_b3:        "objective remove o_s2_boo_3"
-  e_s2_del_obj_b4:        "objective remove o_s2_boo_4"
-  e_s2_del_obj_b5:        "objective remove o_s2_boo_5"
-  e_s2_del_obj_b6:        "objective remove o_s2_boo_6"
-  e_s2_del_obj_b7:        "objective remove o_s2_boo_7"
-  e_s2_del_obj_b8:        "objective remove o_s2_boo_8"
-  e_s2_del_obj_b9:        "objective remove o_s2_boo_9"
-  e_s2_del_obj_b10:       "objective remove o_s2_boo_10"
-  e_s2_del_obj_b11:       "objective remove o_s2_boo_11"
-  e_s2_del_obj_b12:       "objective remove o_s2_boo_12"
-  e_s2_del_obj_b13:       "objective remove o_s2_boo_13"
-  e_s2_del_obj_b14:       "objective remove o_s2_boo_14"
-  e_s2_del_obj_b15:       "objective remove o_s2_boo_15"
-  e_s2_del_obj_b16:       "objective remove o_s2_boo_16"
-  e_s2_del_obj_b17:       "objective remove o_s2_boo_17"
-  e_s2_del_obj_b18:       "objective remove o_s2_boo_18"
-  e_s2_del_obj_b19:       "objective remove o_s2_boo_19"
-  e_s2_del_obj_b20:       "objective remove o_s2_boo_20"
-  e_s2_del_obj_b21:       "objective remove o_s2_boo_21"
-  e_s2_del_obj_b22:       "objective remove o_s2_boo_22"
-  e_s2_del_obj_b23:       "objective remove o_s2_boo_23"
-  e_s2_del_obj_b24:       "objective remove o_s2_boo_24"
-  e_s2_del_obj_b25:       "objective remove o_s2_boo_25"
+  deit_s2:                "folder e_s2_del_obj_boos,e_obj_del_s2_star,e_s2_del_point_bk,if_s2_spawned,e_s2_tag_del_spawned"
+  e_s2_del_obj_boos:      "folder e_s2_del_obj_boo_g1,e_s2_del_obj_boo_g2,e_s2_del_obj_boo_g3,e_s2_del_obj_boo_g4,e_s2_del_obj_boo_g5"
+  e_s2_del_obj_boo_g1:    "run ^objective remove o_s2_boo_1 ^objective remove o_s2_boo_2 ^objective remove o_s2_boo_3 ^objective remove o_s2_boo_4 ^objective remove o_s2_boo_5"
+  e_s2_del_obj_boo_g2:    "run ^objective remove o_s2_boo_6 ^objective remove o_s2_boo_7 ^objective remove o_s2_boo_8 ^objective remove o_s2_boo_9 ^objective remove o_s2_boo_10"
+  e_s2_del_obj_boo_g3:    "run ^objective remove o_s2_boo_11 ^objective remove o_s2_boo_12 ^objective remove o_s2_boo_13 ^objective remove o_s2_boo_14 ^objective remove o_s2_boo_15"
+  e_s2_del_obj_boo_g4:    "run ^objective remove o_s2_boo_16 ^objective remove o_s2_boo_17 ^objective remove o_s2_boo_18 ^objective remove o_s2_boo_19 ^objective remove o_s2_boo_20"
+  e_s2_del_obj_boo_g5:    "run ^objective remove o_s2_boo_21 ^objective remove o_s2_boo_22 ^objective remove o_s2_boo_23 ^objective remove o_s2_boo_24 ^objective remove o_s2_boo_25"
+
   e_obj_del_s2_star:      "objective remove o_s2_star"
   e_s2_del_point_bk:      "point bbh_s2_bk 0 action:set"
+
 
   if_s2_spawned:          "if chk_s2_spawned e_s2_del_spawned else core-main.e_dummy"
   e_s2_del_spawned:       "folder e_s2_gp_sub_star,if_s2_despawn"
@@ -148,6 +106,7 @@ conditions:
 
 objectives:
   o_s2_star:              "action right any loc:$s2.star_loc$ events:win_s2"
+
   o_s2_boo_1:             "action right any loc:$s2.boo_1_loc$ events:e_s2_killed_boo"
   o_s2_boo_2:             "action right any loc:$s2.boo_2_loc$ events:e_s2_killed_boo"
   o_s2_boo_3:             "action right any loc:$s2.boo_3_loc$ events:e_s2_killed_boo"
