--- a/QuestPackages/m64/bbh/level/zones/zones.yml
+++ b/QuestPackages/m64/bbh/level/zones/zones.yml
@@ -1,3 +1,3 @@
 events:
-  init_zones:       "init_merrygo"
-  deit_zones:       "deit_merrygo"
+  init_zones:       "folder init_merrygo"
+  deit_zones:       "folder deit_merrygo"
