--- a/QuestPackages/m64/bbh/package.yml
+++ b/QuestPackages/m64/bbh/package.yml
@@ -5,8 +5,8 @@ variables:
 
 
 events:
-  init_level:           "folder init_spawns,init_zones,init_bridge,init_falltp,init_cinv,init_stars,e_play_music,init_intro"
-  deit_level:           "folder deit_spawns,deit_zones,deit_bridge,deit_falltp,deit_cinv,deit_stars,e_stop_music"
+  init_level:           "folder init_spawns,init_zones,init_bridges,init_falltp,init_cinv,init_stars,e_play_music,init_intro"
+  deit_level:           "folder deit_spawns,deit_zones,deit_bridges,deit_falltp,deit_cinv,deit_stars,e_stop_music"
   unlo_level:           "folder exit_level period:3 ticks"
   exit_level:           "folder deit_level,e_tp_respawn,core-main.init_castle"
 
