--- a/QuestPackages/m64/wf/package.yml
+++ b/QuestPackages/m64/wf/package.yml
@@ -14,9 +14,9 @@ variables:
   exitsign:           -365;68;-401;marocraft
 
 events:
-  init_level:         "folder init_spawns,init_cannons,init_bridges,init_kz,init_stars,e_play_music,init_redcoins"
+  init_level:         "folder init_spawns,init_cannons,init_bridges,init_kz,init_stars,e_play_music,init_fakes"
   deit_level:         "folder deit_spawns,deit_cannons,deit_bridges,deit_kz,deit_stars,e_stop_music"
-  unlo_level:         "folder deit_redcoins,exit_level period:3 ticks"
+  unlo_level:         "folder deit_fakes,exit_level period:3 ticks"
   exit_level:         "folder deit_level,e_tp_respawn,core-main.init_castle"
 
   on_death:           "folder e_notify_death,exit_level,e_point_add_death,e_gpoint_add_death"
@@ -47,10 +47,10 @@ events:
   e_gpoint_add_death: "globalpoint wf_deaths 1 action:add"
 
   # Fake blocks
-  init_redcoins:      "folder e_init_rcoins delay:1"
-  deit_redcoins:      "folder e_deit_rcoins"
-  e_init_rcoins:      "command showfakeskulls %player% wf_rc_1 wf_rc_2 wf_rc_3 wf_rc_4 wf_rc_5 wf_rc_6 wf_rc_7 wf_rc_8 wf_rc_9 wf_rc_10 wf_rc_11 wf_rc_12"
-  e_deit_rcoins:      "command hidefakeskulls %player% wf_rc_1 wf_rc_2 wf_rc_3 wf_rc_4 wf_rc_5 wf_rc_6 wf_rc_7 wf_rc_8 wf_rc_9 wf_rc_10 wf_rc_11 wf_rc_12"
+  init_fakes:           "folder init_redcoins delay:1"
+  deit_fakes:           "folder deit_redcoins"
+  init_redcoins:        "command showfakeskulls %player% wf_rc_1 wf_rc_2 wf_rc_3 wf_rc_4 wf_rc_5 wf_rc_6 wf_rc_7 wf_rc_8 wf_rc_9 wf_rc_10 wf_rc_11 wf_rc_12"
+  deit_redcoins:        "command hidefakeskulls %player% wf_rc_1 wf_rc_2 wf_rc_3 wf_rc_4 wf_rc_5 wf_rc_6 wf_rc_7 wf_rc_8 wf_rc_9 wf_rc_10 wf_rc_11 wf_rc_12"
 
 
 objectives:
