--- a/QuestPackages/m64/bbh/package.yml
+++ b/QuestPackages/m64/bbh/package.yml
@@ -5,9 +5,9 @@ variables:
 
 
 events:
-  init_level:           "folder init_spawns,init_zones,init_bridges,init_falltp,init_cinv,init_stars,e_play_music,init_intro"
+  init_level:           "folder init_spawns,init_zones,init_bridges,init_falltp,init_cinv,init_stars,e_play_music,init_intro,init_fakes"
   deit_level:           "folder deit_spawns,deit_zones,deit_bridges,deit_falltp,deit_cinv,deit_stars,e_stop_music"
-  unlo_level:           "folder exit_level period:3 ticks"
+  unlo_level:           "folder deit_fakes,exit_level period:3 ticks"
   exit_level:           "folder deit_level,e_tp_respawn,core-main.init_castle"
 
   on_death:             "folder e_notify_death,exit_level,e_point_add_death,e_gpoint_add_death"
@@ -37,6 +37,12 @@ events:
   e_notify_death:       "command broadcast &3%player%&f died in BBH."
   e_point_add_death:    "point bbh_deaths 1 action:add"
   e_gpoint_add_death:   "globalpoint bbh_deaths 1 action:add"
+
+  # Fake blocks
+  init_fakes:           "folder init_redcoins delay:1"
+  deit_fakes:           "folder deit_redcoins"
+  init_redcoins:        "command showfakeskulls %player% bbh_rc_1 bbh_rc_2 bbh_rc_3 bbh_rc_4 bbh_rc_5 bbh_rc_6 bbh_rc_7 bbh_rc_8 bbh_rc_9 bbh_rc_10 bbh_rc_11 bbh_rc_12"
+  deit_redcoins:        "command hidefakeskulls %player% bbh_rc_1 bbh_rc_2 bbh_rc_3 bbh_rc_4 bbh_rc_5 bbh_rc_6 bbh_rc_7 bbh_rc_8 bbh_rc_9 bbh_rc_10 bbh_rc_11 bbh_rc_12"
 
 
 objectives:
