--- a/QuestPackages/m64/bbh/stars/star_4_rc.yml
+++ b/QuestPackages/m64/bbh/stars/star_4_rc.yml
@@ -36,21 +36,21 @@ events:
   e_obj_add_s4_rc11:      "objective add o_s4_rc11"
   e_obj_add_s4_rc12:      "objective add o_s4_rc12"
 
-  # Red Coins
-  e_hide_rc_1:            "command togglefakeskull %player% bob_rc_1 hide"
-  e_hide_rc_2:            "command togglefakeskull %player% bob_rc_2 hide"
-  e_hide_rc_3:            "command togglefakeskull %player% bob_rc_3 hide"
-  e_hide_rc_4:            "command togglefakeskull %player% bob_rc_4 hide"
-  e_hide_rc_5:            "command togglefakeskull %player% bob_rc_5 hide"
-  e_hide_rc_6:            "command togglefakeskull %player% bob_rc_6 hide"
-  e_hide_rc_7:            "command togglefakeskull %player% bob_rc_7 hide"
-  e_hide_rc_8:            "command togglefakeskull %player% bob_rc_8 hide"
-  e_hide_rc_9:            "command togglefakeskull %player% bob_rc_9 hide"
-  e_hide_rc_10:           "command togglefakeskull %player% bob_rc_10 hide"
-  e_hide_rc_11:           "command togglefakeskull %player% bob_rc_11 hide"
-  e_hide_rc_12:           "command togglefakeskull %player% bob_rc_12 hide"
-
   e_s4_rc_add_point:      "point rc_count 1 action:add"
+
+  # Red Coins
+  e_hide_rc_1:            "command togglefakeskull %player% bbh_rc_1 hide"
+  e_hide_rc_2:            "command togglefakeskull %player% bbh_rc_2 hide"
+  e_hide_rc_3:            "command togglefakeskull %player% bbh_rc_3 hide"
+  e_hide_rc_4:            "command togglefakeskull %player% bbh_rc_4 hide"
+  e_hide_rc_5:            "command togglefakeskull %player% bbh_rc_5 hide"
+  e_hide_rc_6:            "command togglefakeskull %player% bbh_rc_6 hide"
+  e_hide_rc_7:            "command togglefakeskull %player% bbh_rc_7 hide"
+  e_hide_rc_8:            "command togglefakeskull %player% bbh_rc_8 hide"
+  e_hide_rc_9:            "command togglefakeskull %player% bbh_rc_9 hide"
+  e_hide_rc_10:           "command togglefakeskull %player% bbh_rc_10 hide"
+  e_hide_rc_11:           "command togglefakeskull %player% bbh_rc_11 hide"
+  e_hide_rc_12:           "command togglefakeskull %player% bbh_rc_12 hide"
 
   # Rc1
   e_s4_got_rc1:           "folder e_s4_add_tag_rc1,e_s4_rc_add_point,core-sfx.e_coin,e_hide_rc_1,e_s4_notify_rc1,if_all_rc_s4"
@@ -106,7 +106,7 @@ events:
   e_s4_all_rc_gotten:     "folder e_s4_spawn_star"
 
   # Spawn star
-  e_s4_spawn_star:        "folder e_s4_show_star,e_s4_spawn_star,e_s4_summon_firework,core-sfx.e_star_spawn,e_s4_notif_spawn_star,e_obj_add_s4_star"
+  e_s4_spawn_star:        "folder e_s4_show_star,e_s4_summon_firework,core-sfx.e_star_spawn,e_s4_notif_spawn_star,e_obj_add_s4_star"
   e_s4_show_star:         "command togglefakeblock %player% bbh_star_4 show"
   e_s4_summon_firework:   "command execute in minecraft:overworld run summon firework_rocket $s4.star_loc_xyz$ {LifeTime:10,Motion:[0d,1d,0d],shotAtAngle:1b,FireworksItem:{id:firework_rocket,Count:1,tag:{Fireworks:{Flight:20,Explosions:[{Type:1,Flicker:1b,Colors:[I;14602026]},{Colors:[I;11743532]},{Colors:[I;4312372]}]}}}}"
   e_s4_notif_spawn_star:  "notify &3A star has spawned! io:title"
@@ -145,7 +145,7 @@ events:
   e_obj_del_s4_star:      "objective remove o_s4_star"
   e_s4_del_tags:          "folder e_s4_del_tags_1,e_s4_del_tags_2"
   e_s4_del_tags_1:        "run ^tag delete rc1 ^tag delete rc2 ^tag delete rc3 ^tag delete rc4 ^tag delete rc5 ^tag delete rc6"
-  e_s4_del_tags_2:        "run ^tag delete rc7 ^tag delete rc8  ^tag delete rc9 ^tag delete rc10 ^tag delete rc11 ^tag delete rc12"
+  e_s4_del_tags_2:        "run ^tag delete rc7 ^tag delete rc8 ^tag delete rc9 ^tag delete rc10 ^tag delete rc11 ^tag delete rc12"
 
   e_s4_despawn_star:      "folder e_s4_hide_star"
   e_s4_hide_star:         "command togglefakeblock %player% bbh_star_4 hide"
