--- a/QuestPackages/m64/wf/stars/star_4.yml
+++ b/QuestPackages/m64/wf/stars/star_4.yml
@@ -148,7 +148,7 @@ events:
   e_s4_del_tags_2:        "run ^tag delete rc7 ^tag delete rc8  ^tag delete rc9 ^tag delete rc10 ^tag delete rc11 ^tag delete rc12"
 
   e_s4_despawn_star:      "folder e_s4_hide_star"
-  e_s4_hide_star:         "command togglefakeblock %player% bob_star_4 hide"
+  e_s4_hide_star:         "command togglefakeblock %player% wf_star_4 hide"
 
 
 conditions:
